src/index.css
html {
  box-sizing: border-box;
  height: 100%;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}


body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: 'Open Sans Condensed', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.page-container {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  position: relative;
}

.page-header {
  width: 100%;
  flex: 1 0 0;
  background-color: black;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.page-title {
  flex: 0 0 85%;
  text-align: center;
}

.page-title-icon {
  flex: 0 0 15%;
  text-align: center;
}

.page-title-text {
  color: white;
  font-size: 1.5em;
}

@keyframes slideOn {
	from	{left: -1000px;}
	to    {left: 0px;}
}

@keyframes slideOff {
	from  {left: 0px;}
	to    {left: -1000px;}
}

.filter-query-box {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin: 0 0 0 2%;
}

.search-window {
  flex: 2 0 100%;
  max-width: 80%;
}

.search-icon {
  padding: 5px;
  flex: 1 0 0;
}

.filter-comp {
  position: absolute;
  top: 100px;
  bottom: 0px;
  width: 40%;
  background-color: black;
  color: white;
  display: flex;
  flex-direction: column;
}

.filter-comp.open {
  animation: slideOn 0.50s ease 0s 1 normal forwards running;
}

.filter-comp.close {
  animation: slideOff 0.50s ease 0s 1 normal forwards running;
}

.filter-comp.invisible {
  left: -1000px;
}

.filter-comp.visible {
  left: 0px;
}

#map {
  flex: 20 0 0;
}

.filter-list {
  padding: 0;
}

.filter-listitem {
  list-style: none;
  margin: 1em 0 1em 2%;
}

.filter-listitem:hover {
  color: yellow;
}

.filter-listitem:focus {
  color: yellow;
  border: 3px solid silver;
}

.iwin-container {
  display: flex;
  flex-direction: column;
  background-color: black;
  width: 100%;
  height: auto;
}

.iwin-header {
  flex: 1 0 0;
  color: white;
  font-size: 1em;
  font-weight: bold;
}

.iwin-body {
  display: flex;
  justify-content: space-between;
  align-items: top;
}

.iwin-picframe {
  max-width: 50%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: top;
}
.iwin-photo {
  object-fit: contain;
}

.iwin-details {
  
  min-width: 50%;
}

.iwin-footer {
  
}

@media screen and (min-width: 660px)
{
  body {
    font-family: sans-serif;
  }

  #root {
    max-width: 800px;
    margin: auto;
  }

  .page-title {
    flex: 0 0 100%;
    padding-right: 0;
  }

  .page-title-text {
    font-size: 1.5em;
  }

  .page-title-icon {
    display: none;
  }

  .filter-comp {
    position: static;
    left: 0px;
    top: 0px;
    width: 100%;
    flex: 1 0 0;
    
  }

  .filter-comp.open {
    position: static;
    left: 0px;
    top: 0px;
    width: 100%;
    flex: 1 0 0;
  }

  .filter-comp.close {
    position: static;
    left: 0px;
    top: 0px;
    width: 100%;
    flex: 1 0 0;
  }

  .filter-comp.invisible {
    position: static;
    left: 0px;
    top: 0px;
    width: 100%;
    flex: 1 0 0;
  }

  .filter-comp.visible {
    position: static;
    left: 0px;
    top: 0px;
    width: 100%;
    flex: 1 0 0;
  }

  .filter-query-box {
    justify-content: left;
    padding: 5px;
  }

  .search-window {
    max-width: 50%;
    font-size: 1em;
  }

  .filter-listitem {
    font-size: 1em;
  }

  .map-col {
    width: auto;
  }
}

